// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BookDetail with a long description 1`] = `
<div
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="sc-kGXeez wiBcw"
  >
    <svg
      aria-hidden="true"
      className="sc-dxgOiQ RUNIu StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={22}
      onClick={[Function]}
      role={undefined}
      viewBox="0 0 24 24"
      width={22}
    >
      <path
        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
      />
    </svg>
    <div
      className="sc-ckVGcZ eOlBut"
      onClick={[Function]}
    >
      <img
        className="sc-jKJlTe FXDvr"
        src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
      />
      <div
        className="sc-eNQAEJ dsPisP"
      >
        <div
          className="sc-hMqMXs kpzPYh"
        >
          <p
            className="sc-kEYyzF kAzyut"
          >
            Curso de montagem e manutenção de computadores
          </p>
          <p
            className="sc-kkGfuU gZmDEH"
          >
            Marilane Almeida
          </p>
        </div>
        <div
          className="sc-iAyFgw hkElhK"
        >
          <div
            className="dv-star-rating dv-star-rating-non-editable"
            style={
              Object {
                "display": "inline-block",
                "position": "relative",
              }
            }
          >
            <input
              checked={true}
              className="dv-star-rating-input"
              id="rate2_4"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={4}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_4"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_3"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={3}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_3"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_2"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={2}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_2"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_1"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={1}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_1"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
          </div>
          <div
            className="sc-hSdWYo elxiTo"
          >
            <p
              className="sc-cvbbAY jixcKc"
            >
              R$4.95
            </p>
            <p
              className="sc-eHgmQL dGnJJV"
            >
              R$9.90
            </p>
          </div>
        </div>
        <div
          className="sc-jWBwVP lhRNKy"
        >
          <p
            className="sc-brqgnP kbvMqL"
          >
            Descrição: This is a long description just to see with it will not break lines etc etc etc etc etc etc
                This is a long text just to see with it will not break lines etc etc etc etc etc etc
                This is a long text just to see with it will not break lines etc etc etc etc etc etc
      ...
          </p>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookDetail with buy link  1`] = `
<div
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="sc-kGXeez wiBcw"
  >
    <svg
      aria-hidden="true"
      className="sc-kpOJdX blVqBL StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={22}
      onClick={[Function]}
      role={undefined}
      viewBox="0 0 24 24"
      width={22}
    >
      <path
        d="M20.205 4.791a5.938 5.938 0 0 0-4.209-1.754A5.906 5.906 0 0 0 12 4.595a5.904 5.904 0 0 0-3.996-1.558 5.942 5.942 0 0 0-4.213 1.758c-2.353 2.363-2.352 6.059.002 8.412L12 21.414l8.207-8.207c2.354-2.353 2.355-6.049-.002-8.416z"
      />
    </svg>
    <div
      className="sc-ckVGcZ eOlBut"
      onClick={[Function]}
    >
      <img
        className="sc-jKJlTe FXDvr"
        src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
      />
      <div
        className="sc-eNQAEJ dsPisP"
      >
        <div
          className="sc-hMqMXs kpzPYh"
        >
          <p
            className="sc-kEYyzF kAzyut"
          >
            Curso de montagem e manutenção de computadores
          </p>
          <p
            className="sc-kkGfuU gZmDEH"
          >
            Marilane Almeida
          </p>
        </div>
        <div
          className="sc-iAyFgw hkElhK"
        >
          <div
            className="dv-star-rating dv-star-rating-non-editable"
            style={
              Object {
                "display": "inline-block",
                "position": "relative",
              }
            }
          >
            <input
              checked={true}
              className="dv-star-rating-input"
              id="rate2_4"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={4}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_4"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_3"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={3}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_3"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_2"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={2}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_2"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_1"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={1}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_1"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
          </div>
          <div
            className="sc-hSdWYo elxiTo"
          >
            <p
              className="sc-cvbbAY jixcKc"
            >
              R$4.95
            </p>
            <p
              className="sc-eHgmQL dGnJJV"
            >
              R$9.90
            </p>
          </div>
        </div>
        <div
          className="sc-jWBwVP lhRNKy"
        >
          <p
            className="sc-brqgnP kbvMqL"
          >
            Descrição: Test test test and test Test test test and testTest test test and testTest test test and testTest test test and testTest test test and testTest test test and test
          </p>
          <div
            className="sc-cMljjf dCqCEK"
            onClick={[Function]}
          >
            COMPRAR
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookDetail with favorite selected 1`] = `
<div
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="sc-kGXeez wiBcw"
  >
    <svg
      aria-hidden="true"
      className="sc-kpOJdX blVqBL StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={22}
      onClick={[Function]}
      role={undefined}
      viewBox="0 0 24 24"
      width={22}
    >
      <path
        d="M20.205 4.791a5.938 5.938 0 0 0-4.209-1.754A5.906 5.906 0 0 0 12 4.595a5.904 5.904 0 0 0-3.996-1.558 5.942 5.942 0 0 0-4.213 1.758c-2.353 2.363-2.352 6.059.002 8.412L12 21.414l8.207-8.207c2.354-2.353 2.355-6.049-.002-8.416z"
      />
    </svg>
    <div
      className="sc-ckVGcZ eOlBut"
      onClick={[Function]}
    >
      <img
        className="sc-jKJlTe FXDvr"
        src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
      />
      <div
        className="sc-eNQAEJ dsPisP"
      >
        <div
          className="sc-hMqMXs kpzPYh"
        >
          <p
            className="sc-kEYyzF kAzyut"
          >
            Curso de montagem e manutenção de computadores
          </p>
          <p
            className="sc-kkGfuU gZmDEH"
          >
            Marilane Almeida
          </p>
        </div>
        <div
          className="sc-iAyFgw hkElhK"
        >
          <div
            className="dv-star-rating dv-star-rating-non-editable"
            style={
              Object {
                "display": "inline-block",
                "position": "relative",
              }
            }
          >
            <input
              checked={true}
              className="dv-star-rating-input"
              id="rate2_4"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={4}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_4"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_3"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={3}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_3"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_2"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={2}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_2"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_1"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={1}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_1"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
          </div>
          <div
            className="sc-hSdWYo elxiTo"
          >
            <p
              className="sc-cvbbAY jixcKc"
            >
              R$4.95
            </p>
            <p
              className="sc-eHgmQL dGnJJV"
            >
              R$9.90
            </p>
          </div>
        </div>
        <div
          className="sc-jWBwVP lhRNKy"
        >
          <p
            className="sc-brqgnP kbvMqL"
          >
            Descrição: Test test test and test Test test test and testTest test test and testTest test test and testTest test test and testTest test test and testTest test test and test
          </p>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookDetail without description 1`] = `
<div
  style={
    Object {
      "width": "50%",
    }
  }
>
  <div
    className="sc-kGXeez wiBcw"
  >
    <svg
      aria-hidden="true"
      className="sc-dxgOiQ RUNIu StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={22}
      onClick={[Function]}
      role={undefined}
      viewBox="0 0 24 24"
      width={22}
    >
      <path
        d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"
      />
    </svg>
    <div
      className="sc-ckVGcZ eOlBut"
      onClick={[Function]}
    >
      <img
        className="sc-jKJlTe FXDvr"
        src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
      />
      <div
        className="sc-eNQAEJ dsPisP"
      >
        <div
          className="sc-hMqMXs kpzPYh"
        >
          <p
            className="sc-kEYyzF kAzyut"
          >
            Curso de montagem e manutenção de computadores
          </p>
          <p
            className="sc-kkGfuU gZmDEH"
          >
            Marilane Almeida
          </p>
        </div>
        <div
          className="sc-iAyFgw hkElhK"
        >
          <div
            className="dv-star-rating dv-star-rating-non-editable"
            style={
              Object {
                "display": "inline-block",
                "position": "relative",
              }
            }
          >
            <input
              checked={true}
              className="dv-star-rating-input"
              id="rate2_4"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={4}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_4"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_3"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={3}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_3"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_2"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={2}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_2"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
            <input
              checked={false}
              className="dv-star-rating-input"
              id="rate2_1"
              name="rate2"
              onChange={[Function]}
              style={
                Object {
                  "display": "none",
                  "marginLeft": -9999,
                  "position": "absolute",
                }
              }
              type="radio"
              value={1}
            />
            <label
              className="dv-star-rating-star dv-star-rating-full-star"
              htmlFor="rate2_1"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "color": "#ffb400",
                  "cursor": "default",
                  "float": "right",
                }
              }
            >
              <i
                style={
                  Object {
                    "fontStyle": "normal",
                  }
                }
              >
                ★
              </i>
            </label>
          </div>
          <div
            className="sc-hSdWYo elxiTo"
          >
            <p
              className="sc-cvbbAY jixcKc"
            >
              R$4.95
            </p>
            <p
              className="sc-eHgmQL dGnJJV"
            >
              R$9.90
            </p>
          </div>
        </div>
        <div
          className="sc-jWBwVP lhRNKy"
        >
          <p
            className="sc-brqgnP kbvMqL"
          >
            Descrição: Test test test and test Test test test and testTest test test and testTest test test and testTest test test and testTest test test and testTest test test and test
          </p>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem sample 1`] = `
<div
  className="sc-gZMcBi bJwtyo"
  onClick={[Function]}
>
  <img
    className="sc-gqjmRU gGcQZY"
    src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
  />
  <div
    className="sc-VigVT facbFy"
  >
    <div
      className="sc-jTzLTM dEehHl"
    >
      <p
        className="sc-fjdhpX ldJyfM"
      >
        Curso de montagem
      </p>
      <p
        className="sc-jzJRlG bAORBt"
      >
        Marilane Almeida
      </p>
    </div>
    <div
      className="sc-cSHVUG dEvoFo"
    >
      <div
        className="dv-star-rating dv-star-rating-non-editable"
        style={
          Object {
            "display": "inline-block",
            "position": "relative",
          }
        }
      >
        <input
          checked={true}
          className="dv-star-rating-input"
          id="rate2_4"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={4}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_4"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_3"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={3}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_3"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_2"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={2}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_2"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_1"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={1}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_1"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
      </div>
      <div
        className="sc-kAzzGY bccKyZ"
      >
        <p
          className="sc-kgoBCf dGEGbx"
        >
          R$4.95
        </p>
        <p
          className="sc-chPdSV kfQcoH"
        >
          R$9.90
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem with image placeholder 1`] = `
<div
  className="sc-gZMcBi bJwtyo"
  onClick={[Function]}
>
  <img
    className="sc-gqjmRU gGcQZY"
    src="https://via.placeholder.com/169x230.png?text=IMAGEM+N%C3%83O+DISPON%C3%8DVEL"
  />
  <div
    className="sc-VigVT facbFy"
  >
    <div
      className="sc-jTzLTM dEehHl"
    >
      <p
        className="sc-fjdhpX ldJyfM"
      >
        Curso de montagem
      </p>
      <p
        className="sc-jzJRlG bAORBt"
      >
        Marilane Almeida
      </p>
    </div>
    <div
      className="sc-cSHVUG dEvoFo"
    >
      <div
        className="dv-star-rating dv-star-rating-non-editable"
        style={
          Object {
            "display": "inline-block",
            "position": "relative",
          }
        }
      >
        <input
          checked={true}
          className="dv-star-rating-input"
          id="rate2_4"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={4}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_4"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_3"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={3}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_3"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_2"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={2}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_2"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_1"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={1}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_1"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
      </div>
      <div
        className="sc-kAzzGY bccKyZ"
      >
        <p
          className="sc-kgoBCf dGEGbx"
        >
          R$4.95
        </p>
        <p
          className="sc-chPdSV kfQcoH"
        >
          R$9.90
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem with long author name 1`] = `
<div
  className="sc-gZMcBi bJwtyo"
  onClick={[Function]}
>
  <img
    className="sc-gqjmRU gGcQZY"
    src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
  />
  <div
    className="sc-VigVT facbFy"
  >
    <div
      className="sc-jTzLTM dEehHl"
    >
      <p
        className="sc-fjdhpX ldJyfM"
      >
        This is a long te
      </p>
      <p
        className="sc-jzJRlG bAORBt"
      >
        This is a long te
      </p>
    </div>
    <div
      className="sc-cSHVUG dEvoFo"
    >
      <div
        className="dv-star-rating dv-star-rating-non-editable"
        style={
          Object {
            "display": "inline-block",
            "position": "relative",
          }
        }
      />
      <div
        className="sc-kAzzGY bccKyZ"
      >
        <p
          className="sc-kgoBCf dGEGbx"
        >
          R$4.95
        </p>
        <p
          className="sc-chPdSV kfQcoH"
        >
          INDISP.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem with long title 1`] = `
<div
  className="sc-gZMcBi bJwtyo"
  onClick={[Function]}
>
  <img
    className="sc-gqjmRU gGcQZY"
    src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
  />
  <div
    className="sc-VigVT facbFy"
  >
    <div
      className="sc-jTzLTM dEehHl"
    >
      <p
        className="sc-fjdhpX ldJyfM"
      >
        This is a long te
      </p>
      <p
        className="sc-jzJRlG bAORBt"
      >
        Marilane Almeida
      </p>
    </div>
    <div
      className="sc-cSHVUG dEvoFo"
    >
      <div
        className="dv-star-rating dv-star-rating-non-editable"
        style={
          Object {
            "display": "inline-block",
            "position": "relative",
          }
        }
      />
      <div
        className="sc-kAzzGY bccKyZ"
      >
        <p
          className="sc-kgoBCf dGEGbx"
        >
          R$4.95
        </p>
        <p
          className="sc-chPdSV kfQcoH"
        >
          INDISP.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem with unavailable price 1`] = `
<div
  className="sc-gZMcBi bJwtyo"
  onClick={[Function]}
>
  <img
    className="sc-gqjmRU gGcQZY"
    src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
  />
  <div
    className="sc-VigVT facbFy"
  >
    <div
      className="sc-jTzLTM dEehHl"
    >
      <p
        className="sc-fjdhpX ldJyfM"
      >
        Curso de montagem
      </p>
      <p
        className="sc-jzJRlG bAORBt"
      >
        Marilane Almeida
      </p>
    </div>
    <div
      className="sc-cSHVUG dEvoFo"
    >
      <div
        className="dv-star-rating dv-star-rating-non-editable"
        style={
          Object {
            "display": "inline-block",
            "position": "relative",
          }
        }
      >
        <input
          checked={true}
          className="dv-star-rating-input"
          id="rate2_4"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={4}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_4"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_3"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={3}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_3"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_2"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={2}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_2"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
        <input
          checked={false}
          className="dv-star-rating-input"
          id="rate2_1"
          name="rate2"
          onChange={[Function]}
          style={
            Object {
              "display": "none",
              "marginLeft": -9999,
              "position": "absolute",
            }
          }
          type="radio"
          value={1}
        />
        <label
          className="dv-star-rating-star dv-star-rating-full-star"
          htmlFor="rate2_1"
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "color": "#ffb400",
              "cursor": "default",
              "float": "right",
            }
          }
        >
          <i
            style={
              Object {
                "fontStyle": "normal",
              }
            }
          >
            ★
          </i>
        </label>
      </div>
      <div
        className="sc-kAzzGY bccKyZ"
      >
        <p
          className="sc-kgoBCf dGEGbx"
        >
          R$4.95
        </p>
        <p
          className="sc-chPdSV kfQcoH"
        >
          INDISP.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots BookItem without stars 1`] = `
<div
  className="sc-gZMcBi bJwtyo"
  onClick={[Function]}
>
  <img
    className="sc-gqjmRU gGcQZY"
    src="https://books.google.com/books/content/images/frontcover/vJVFx11Y4toC?fife=w160-h230"
  />
  <div
    className="sc-VigVT facbFy"
  >
    <div
      className="sc-jTzLTM dEehHl"
    >
      <p
        className="sc-fjdhpX ldJyfM"
      >
        Curso de montagem
      </p>
      <p
        className="sc-jzJRlG bAORBt"
      >
        Marilane Almeida
      </p>
    </div>
    <div
      className="sc-cSHVUG dEvoFo"
    >
      <div
        className="dv-star-rating dv-star-rating-non-editable"
        style={
          Object {
            "display": "inline-block",
            "position": "relative",
          }
        }
      />
      <div
        className="sc-kAzzGY bccKyZ"
      >
        <p
          className="sc-kgoBCf dGEGbx"
        >
          R$4.95
        </p>
        <p
          className="sc-chPdSV kfQcoH"
        >
          INDISP.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SectionItem sci-fi sample 1`] = `
<div
  className="sc-dnqmqq hYGSmU"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="sc-bdVaJa bDWFJH StyledIconBase-sc-bdy9j4 cCvWXa"
    color="rgba(51, 51, 51,0.5)"
    fill="currentColor"
    focusable="false"
    height={18}
    role={undefined}
    viewBox="0 0 576 512"
    width={18}
  >
    <path
      d="M208 0c-29.87 0-54.74 20.55-61.8 48.22-.75-.02-1.45-.22-2.2-.22-35.34 0-64 28.65-64 64 0 4.84.64 9.51 1.66 14.04C52.54 138 32 166.57 32 200c0 12.58 3.16 24.32 8.34 34.91C16.34 248.72 0 274.33 0 304c0 33.34 20.42 61.88 49.42 73.89-.9 4.57-1.42 9.28-1.42 14.11 0 39.76 32.23 72 72 72 4.12 0 8.1-.55 12.03-1.21C141.61 491.31 168.25 512 200 512c39.77 0 72-32.24 72-72V205.45c-10.91 8.98-23.98 15.45-38.36 18.39-4.97 1.02-9.64-2.82-9.64-7.89v-16.18c0-3.57 2.35-6.78 5.8-7.66 24.2-6.16 42.2-27.95 42.2-54.04V64c0-35.35-28.66-64-64-64zm368 304c0-29.67-16.34-55.28-40.34-69.09 5.17-10.59 8.34-22.33 8.34-34.91 0-33.43-20.54-62-49.66-73.96 1.02-4.53 1.66-9.2 1.66-14.04 0-35.35-28.66-64-64-64-.75 0-1.45.2-2.2.22C422.74 20.55 397.87 0 368 0c-35.34 0-64 28.65-64 64v74.07c0 26.09 17.99 47.88 42.2 54.04 3.46.88 5.8 4.09 5.8 7.66v16.18c0 5.07-4.68 8.91-9.64 7.89-14.38-2.94-27.44-9.41-38.36-18.39V440c0 39.76 32.23 72 72 72 31.75 0 58.39-20.69 67.97-49.21 3.93.67 7.91 1.21 12.03 1.21 39.77 0 72-32.24 72-72 0-4.83-.52-9.54-1.42-14.11 29-12.01 49.42-40.55 49.42-73.89z"
      fill="currentColor"
    />
  </svg>
  <p
    className="sc-iwsKbI cJSXiZ"
  >
    Ficção
  </p>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  style={
    Object {
      "backgroundColor": "#fff",
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "padding": 15,
    }
  }
>
  <h1>
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
